# runsource

./: .gitignore  CMakeLists.txt  COPYING  README.md
context-menu/: runsource.nemo_action
context_menu/: Benchmark.nemo_action  Run.nemo_action  runsource.nemo_action
kcs/: .gitignore  CMakeLists.txt  Doxyfile  README  README.md
kcs/include/kcs/: argparse.hpp  filesystem.hpp  kcs.hpp  lowlevel.hpp  system.hpp
kcs/include/kcs/argparse/: arg_flags.hpp  arg_parser_error_flags.hpp  arg_parser_exception.hpp  arg_parser_flags.hpp  arg_value_error_flags.hpp  arg_value_types.hpp  basic_arg_key.hpp  basic_arg_parser.hpp  basic_arg_value.hpp  basic_foreign_arg.hpp  basic_help_text.hpp  basic_key_arg.hpp  basic_key_value_arg.hpp  basic_value_arg.hpp  ibasic_help_text.hpp
kcs/include/kcs/exception/: exception_base.hpp
kcs/include/kcs/filesystem/: filesystem.cpp  filesystem.hpp
kcs/include/kcs/iostream/: basic_ios_redirect.hpp  basic_ostream.hpp  stdio.hpp
kcs/include/kcs/lowlevel/: arithmetic_operations.hpp  flags_container.hpp
kcs/include/kcs/math/: math.hpp
kcs/include/kcs/stringutils/: stringutils.hpp
kcs/include/kcs/system/: filesystem.hpp  input_output.hpp  process.hpp  system_exception.hpp
kcs/include/kcs/type_casting/: c_string_to_floating_point.hpp  c_string_to_integral_unsigned.hpp  c_string_to_path.hpp  type_cast.hpp
kcs/include/kcs/type_traits/: type_traits.hpp
kcs/src/: CMakeLists.txt
kcs/src/kcs/: argparse.hpp  exception.hpp  iostream.hpp  kcs.hpp  lowlevel.hpp  math.hpp  stringutils.hpp  system.hpp  type_casting.hpp  type_traits.hpp
kcs/src/kcs/argparse/: arg_error_flags.hpp  arg_flags.hpp  arg_parser_exception.hpp  arg_parser_flags.hpp  arg_value_error_flags.hpp  arg_value_types.hpp  basic_arg_key.hpp  basic_arg_parser.hpp  basic_arg_value.hpp  basic_base_arg.hpp  basic_foreign_arg.hpp  basic_help_arg.hpp  basic_key_arg.hpp  basic_version_arg.hpp  ibasic_help_text.hpp
kcs/src/kcs/iostream/: stdio.cpp
kcs/src/kcs/lowlevel/: arithmetic_operations.hpp  enum_bitwise_operators.hpp
kcs/src/kcs/system/: filesystem.cpp  input_output.cpp  input_output.hpp  process.cpp  process.hpp  system.hpp
kcs/src/kcs/type_casting/: bad_type_cast.hpp  basic_string_to_type.hpp  c_string_to_basic_string.hpp  c_string_to_integral_signed.hpp  type_cast.hpp
kcs/test/: CMakeLists.txt
kcs/test/googletest/: CHANGES  CMakeLists.txt  Makefile.am  README.md  configure.ac
kcs/test/googletest/cmake/: internal_utils.cmake
kcs/test/googletest/docs/: AdvancedGuide.md  DevGuide.md  FAQ.md  Primer.md  V1_5_AdvancedGuide.md  V1_5_Documentation.md  V1_5_FAQ.md  V1_5_Primer.md  V1_5_PumpManual.md  V1_6_AdvancedGuide.md  V1_6_FAQ.md  V1_6_Primer.md  V1_6_PumpManual.md  V1_6_XcodeGuide.md  V1_7_AdvancedGuide.md  V1_7_FAQ.md  V1_7_Primer.md  V1_7_Samples.md  XcodeGuide.md
kcs/test/googletest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-param-test.h.pump  gtest-printers.h  gtest.h
kcs/test/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util-generated.h.pump  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h.pump
kcs/test/googletest/m4/: acx_pthread.m4
kcs/test/googletest/make/: Makefile
kcs/test/googletest/samples/: sample2.cc  sample2.h  sample2_unittest.cc
kcs/test/googletest/scripts/: gen_gtest_pred_impl.py  gtest-config.in  pump.py  upload.py
kcs/test/googletest/scripts/test/: Makefile
kcs/test/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-typed-test.cc  gtest.cc
kcs/test/googletest/test/: gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-message_test.cc  gtest-param-test_test.cc  gtest-port_test.cc  gtest-printers_test.cc  gtest_catch_exceptions_test_.cc  gtest_filter_unittest.py  gtest_output_test.py  gtest_output_test_.cc  gtest_stress_test.cc  gtest_test_utils.py  gtest_unittest.cc  gtest_xml_output_unittest.py
kcs/test/googletest/xcode/Config/: StaticLibraryTarget.xcconfig
kcs/test/googletest/xcode/Samples/FrameworkSample/: widget.h  widget_test.cc
kcs/test/googletest/xcode/Scripts/: versiongenerate.py
kcs/test/googletest/xcode/gtest.xcodeproj/: project.pbxproj
kcs/test/kcs_test/: CMakeLists.txt
kcs/test/kcs_test/argparse_test/: arg_parser_exception_test.cpp  arg_parser_test.cpp  base_arg_test.cpp
src/: CMakeLists.txt  c_standard.hpp  cpp_standard.hpp  language.hpp  main.cpp  program.cpp  program.hpp  runbuild_task.cpp  runbuild_task.hpp  runsource_entry.cpp  runsource_entry.hpp  tool_chain.hpp
test/: CMakeLists.txt  build_manger_test.cpp  main.cpp
